--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -306,11 +306,12 @@
     "txt-authentication": "驗證",
     "txt-senderAccount": "寄件者帳號",
     "txt-senderPassword": "寄件者密碼",
-    "txt-recipientEmail": "收件者郵件信箱"
+    "txt-recipientEmail": "收件者郵件信箱",
+    "txt-sendSuccess": "寄送成功",
+    "txt-sendFail": "寄送失敗"
   },
 
   "edge-management": {
-    "txt-threatSettings": "威脅情資設定",
     "txt-uploadThreat": "上傳威脅情資",
     "txt-basicInfo": "基本資訊",
     "txt-editEdge": "編輯Edge",
