--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -508,8 +508,8 @@
     "keywords": "關鍵字",
     "serviceType": "服務種類",
     "connectionStatus": "連線狀態",
-    "txt-lastDataUpdDT": "上次資料更新時間",
-    "txt-attackCnt": "攻擊次數",
+    "txt-lastAlertDataUpdDT": "上次告警資料更新時間",
+    "txt-attackCnt": "誘捕攻擊次數",
     "txt-agentMode": "網路監控模式",
     "txt-lastStatus": "狀態",
     "txt-lastStatusUpdDT": "上次狀態更新時間",
