--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -51,6 +51,9 @@
   "-1004": "password must contain at least one lower-case alphabet/upper-case alphabet/digital/special character and have length more than 12.",
   "-1005": "Password is expired",
   "-1006": "Login fails exceed 5 times",
+  "-5001": "Port number is duplicated",
+  "-5002": "IP is duplicated",
+  "-5003": "Match Pattern error",
 
   "txt-param-null": "Parameter is NULL",
   "txt-account-fail" : "Fail to get accounts from AD"
