--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -51,6 +51,9 @@
   "-1004": "密碼強度需符合長度至少12, 至少一個大寫英文字, 至少一個小寫英文字, 至少一個數字, 至少一個特殊字元, 不能與近五次密碼相同",
   "-1005": "密碼已到期",
   "-1006": "登入錯誤已超過5次",
+  "-5001": "Port number不得重複",
+  "-5002": "IP不得重複",
+  "-5003": "Match Pattern錯誤",
 
   "txt-param-null": "參數為空",
   "txt-account-fail" : "無法由AD獲取帳號資訊"
