--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -31,6 +31,7 @@
   "txt-update": "Update",
   "txt-upload": "Upload",
   "txt-uploadSuccess": "Upload Success",
+  "txt-uploadFailed": "Upload Failed: incorrect file format",
   "txt-seat": "Seat",
   "txt-service": "Service",
   "txt-number": "Number",
