--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -26,7 +26,6 @@
   "txt-databytes": "Databytes",
   "txt-download": "Download",
   "txt-alert": "Alert",
-  "txt-alertMenu": "Alerts",
   "txt-rule": "Rule",
   "txt-update": "Update",
   "txt-upload": "Upload",
@@ -121,8 +120,9 @@
   "txt-severity": "Severity",
 
   "txt-dashboard": "Dashboard",
-  "txt-netflow": "Netflow",
+  "txt-threats": "Threats",
   "txt-syslog": "Syslog",
+  "txt-netflow": "Netflow",
   "txt-endpoint": "Endpoint",
   "txt-configuration": "Configuration",
 
@@ -269,7 +269,6 @@
       "txt-top10text": "TOP 10 Dst. Service/Dst. Host/Dst. IP",
       "txt-analysisType": "Analysis Item",
       "txt-alertRule": "$t(txt-alert)$t(txt-rule)",
-      "txt-addAgentMsg": "Please add a new device in the Edge management page",
       "txt-showImageOnly": "Show images only",
       "txt-viewJSON": "$t(txt-view) JSON",
       "txt-exportCSV": "$t(txt-export) CSV",
