--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -45,6 +45,7 @@
   "txt-add2": "Add",
   "txt-remove": "Remove",
   "txt-refresh": "Refresh",
+  "txt-plsSelect": "Please select one",
   "txt-select": "Select",
   "txt-selected": "Selected",
   "txt-deselect": "Deselect",
@@ -307,6 +308,7 @@
     "txt-senderAccount": "Sender Account",
     "txt-senderPassword": "Sender Password",
     "txt-recipientEmail": "Recipient Email",
+    "txt-emailInvalid": "Please enter correct email address",
     "txt-sendSuccess": "Email has been sent successfully",
     "txt-sendFail": "Email delivery failed"
   },
