--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -45,6 +45,7 @@
   "txt-add2": "加入",
   "txt-remove": "移除",
   "txt-refresh": "更新",
+  "txt-plsSelect": "請選擇",
   "txt-select": "選擇",
   "txt-selected": "已選擇",
   "txt-deselect": "取消選擇",
@@ -307,6 +308,7 @@
     "txt-senderAccount": "寄件者帳號",
     "txt-senderPassword": "寄件者密碼",
     "txt-recipientEmail": "收件者郵件信箱",
+    "txt-emailInvalid": "請輸入正確email",
     "txt-sendSuccess": "寄送成功",
     "txt-sendFail": "寄送失敗"
   },
