--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -346,6 +346,7 @@
     "txt-edgeEditNoEndDate": "Edge end date is missing",
     "txt-edgeEditPastEndDate": "Edge end date must be a future date",
     "txt-ipValidationFail": "Please enter a valid IP:Port address",
+    "txt-threatDateErr": "Date cannot be a future date",
     "statistics": {
       "txt-sourceIndicators": "Source Indicators",
       "txt-indicatorsTrend": "Indicators Trend",
