Update the display of common chart tooltip.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -119,6 +119,7 @@
   "txt-offline": "Offline",
   "txt-unstable": "Unstable",
   "txt-severity": "Severity",
+  "txt-data": "Data",
 
   "txt-dashboard": "Dashboard",
   "txt-threats": "Threats",
