--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -119,6 +119,7 @@
   "txt-offline": "離線",
   "txt-unstable": "不穩定",
   "txt-severity": "嚴重性",
+  "txt-data": "資料",
 
   "txt-dashboard": "Dashboard",
   "txt-threats": "Threats",
