Fix HMD dialog next/previous steps errors.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -489,6 +489,7 @@
     "protocolType": "Protocol Type",
     "attackCnt": "Attack Count",
     "level": "Level",
+    "severity": "Severity",
     "maskedIP": "Masked IP",
     "configSrc": "Config Source",
     "agg": "Country",
