--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -221,7 +221,7 @@
     "txt-safetyScanInfo": "Safety Scan Info",
     "txt-viewJSON": "$t(txt-view)JSON",
     "txt-queryMore": "Query",
-    "txt-queryEvents": "Query Events",
+    "txt-queryEvents": "View Details Infomation",
     "txt-searthVirustotal": "Search Virustotal",
     "txt-downloadPCAP": "Download PCAP",
     "txt-downloadFile": "Download File",
