--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -221,7 +221,7 @@
     "txt-safetyScanInfo": "安全掃描資訊",
     "txt-viewJSON": "$t(txt-view)JSON",
     "txt-queryMore": "查詢更多",
-    "txt-queryEvents": "查詢相關事件",
+    "txt-queryEvents": "查看詳細資料",
     "txt-searthVirustotal": "查詢 Virustotal",
     "txt-downloadPCAP": "下載檔案",
     "txt-downloadFile": "下載惡意程式",
