--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -53,7 +53,7 @@
   "-1006": "登入錯誤已超過5次",
   "-5001": "Port number不得重複",
   "-5002": "IP不得重複",
-  "-5003": "Match Pattern錯誤",
+  "-5003": "Match Pattern格式錯誤",
 
   "txt-param-null": "參數為空",
   "txt-account-fail" : "無法由AD獲取帳號資訊"
