Complete implementing the CSV batch upload for Inventory.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -29,8 +29,10 @@
   "txt-rule": "Rule",
   "txt-update": "Update",
   "txt-upload": "Upload",
+  "txt-uploadStatus": "Upload Status",
   "txt-uploadSuccess": "Upload Success",
   "txt-uploadFailed": "Upload Failed: incorrect file format",
+  "txt-uploadEmpty": "No data to upload",
   "txt-seat": "Seat",
   "txt-service": "Service",
   "txt-number": "Number",
@@ -126,6 +128,7 @@
   "txt-destPort": "Destination Port",
   "txt-configSource": "Config Source",
   "txt-alertHourBefore": "An hour before Alert time",
+  "txt-column": "Column",
 
   "txt-dashboard": "Dashboard",
   "txt-threats": "Threats",
@@ -164,7 +167,7 @@
   "txt-network-map": "Map",
   "txt-selected-node": "Selected Node",
   "txt-mixName": "Department & Title Management",
-  "txt-noEsmpty": "No Empty Name",
+  "txt-noEmpty": "Name cannot be empty",
   "txt-memoMaxLength": "maximum 250 characters",
   "txt-updateTime": "Update Time",
 
@@ -369,6 +372,7 @@
     "txt-manuallyEnter": "Manually Enter",
     "txt-batchUpload": "Batch Upload",
     "txt-batchUploadIp": "Batch Upload IP",
+    "txt-uploadFailed": "The error occured with the following list, please try upload again.",
     "txt-autoSettings": "Auto Settings",
     "txt-withHeader": "With Header",
     "txt-selectIP": "Please select IP field",
