--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -29,8 +29,10 @@
   "txt-rule": "規則",
   "txt-update": "更新",
   "txt-upload": "上傳",
+  "txt-uploadStatus": "上傳狀態",
   "txt-uploadSuccess": "上傳成功",
   "txt-uploadFailed": "上傳失敗: 格式錯誤",
+  "txt-uploadEmpty": "無資料上傳",
   "txt-seat": "座位",
   "txt-service": "服務",
   "txt-number": "數字",
@@ -126,6 +128,7 @@
   "txt-destPort": "目的Port",
   "txt-configSource": "Config Source",
   "txt-alertHourBefore": "告警時間前一小時",
+  "txt-column": "欄位",
 
   "txt-dashboard": "Dashboard",
   "txt-threats": "Threats",
@@ -164,7 +167,7 @@
   "txt-network-map": "樓層圖",
   "txt-selected-node": "選擇樓層節點",
   "txt-mixName":"部門與職稱管理",
-  "txt-noEmpty": "名稱不能為空",
+  "txt-noEmpty": "名稱不得為空白",
   "txt-memoMaxLength": "上限250字",
   "txt-updateTime": "更新時間",
 
@@ -369,6 +372,7 @@
     "txt-manuallyEnter": "單筆輸入",
     "txt-batchUpload": "批次上傳",
     "txt-batchUploadIp": "批次上傳IP",
+    "txt-uploadFailed": "以下資料上傳失敗，請重新上傳",
     "txt-autoSettings": "自動執行設定",
     "txt-withHeader": "包含表頭",
     "txt-selectIP": "請選擇IP欄位",
