--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -137,7 +137,7 @@
   "txt-endpoint": "Endpoint",
   "txt-configuration": "Configuration",
 
-  "txt-connections": "Connections",
+  "txt-connections-eng": "Connections",
   "txt-dns": "DNS",
 
   "txt-edgeManage": "Edge管理",
@@ -372,6 +372,7 @@
     "txt-manuallyEnter": "單筆輸入",
     "txt-batchUpload": "批次上傳",
     "txt-batchUploadIp": "批次上傳IP",
+    "txt-uploadFailedIP": "IP格式有錯誤，請重新上傳",
     "txt-uploadFailed": "以下資料上傳失敗，請重新上傳",
     "txt-autoSettings": "自動執行設定",
     "txt-withHeader": "包含表頭",
