Add more detail upload info for CSV batch import.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -53,8 +53,8 @@
   "txt-deselect": "Deselect",
   "txt-back": "Back",
   "txt-normal": "Normal",
-  "txt-error": "Error",
   "txt-success": "Success",
+  "txt-error": "Error",
   "txt-fail": "Fail",
   "txt-notFound": "Data not found",
   "txt-size": "Size",
@@ -373,7 +373,7 @@
     "txt-batchUpload": "Batch Upload",
     "txt-batchUploadIp": "Batch Upload IP",
     "txt-uploadFailedIP": "IP address is incorrect, please try upload again.",
-    "txt-uploadFailed": "The following IP contains error, please try upload again.",
+    "txt-uploadFailed": "The following IP contains error, please try again.",
     "txt-autoSettings": "Auto Settings",
     "txt-withHeader": "With Header",
     "txt-selectIP": "Please select IP field",
@@ -390,6 +390,9 @@
     "txt-reCompress": "Re-compress",
     "txt-passCount": "Pass",
     "txt-totalItem": "Total",
+    "txt-total": "Total upload count",
+    "txt-success": "Total success count",
+    "txt-fail": "Total fail count",
     "txt-irMsg": "IR data has been uploaded to",
     "txt-itemSelection": "Select IR Set",
     "txt-duplicatedIP": "IP already exists, please enter another IP",
