--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -53,8 +53,8 @@
   "txt-deselect": "取消選擇",
   "txt-back": "返回",
   "txt-normal": "正常",
-  "txt-error": "錯誤",
   "txt-success": "成功",
+  "txt-error": "錯誤",
   "txt-fail": "失敗",
   "txt-notFound": "查無資料",
   "txt-size": "數量",
@@ -373,7 +373,7 @@
     "txt-batchUpload": "批次上傳",
     "txt-batchUploadIp": "批次上傳IP",
     "txt-uploadFailedIP": "IP格式有錯誤，請重新上傳",
-    "txt-uploadFailed": "以下資料上傳失敗，請重新上傳",
+    "txt-uploadFailed": "以下資料上傳失敗，請再試一次",
     "txt-autoSettings": "自動執行設定",
     "txt-withHeader": "包含表頭",
     "txt-selectIP": "請選擇IP欄位",
@@ -390,6 +390,9 @@
     "txt-reCompress": "重新壓縮",
     "txt-passCount": "通過",
     "txt-totalItem": "總項目",
+    "txt-total": "總上傳筆數",
+    "txt-success": "上傳成功筆數",
+    "txt-fail": "上傳失敗筆數",
     "txt-irMsg": "IR資料已上傳至",
     "txt-itemSelection": "電腦採證",
     "txt-duplicatedIP": "IP已存在，請重新輸入",
