Update query options Top10InternalMaskedIP.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -565,6 +565,7 @@
     "ip": "IP",
     "mac": "MAC",
     "owner": "Owner",
+    "userAccount": "User Account",
     "userName": "User",
     "disks": "$t(txt-disks)",
     "shareFolders": "$t(txt-shareFolders)",
