Add Scan Process count in the Inventory search result page.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -49,6 +49,7 @@
   "txt-refresh": "Refresh",
   "txt-plsSelect": "Please select one",
   "txt-select": "Select",
+  "txt-selectAll": "Select All",
   "txt-selected": "Selected",
   "txt-deselect": "Deselect",
   "txt-back": "Back",
