--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -49,6 +49,7 @@
   "txt-refresh": "更新",
   "txt-plsSelect": "請選擇",
   "txt-select": "選擇",
+  "txt-selectAll": "全選",
   "txt-selected": "已選擇",
   "txt-deselect": "取消選擇",
   "txt-back": "返回",
