Update charts name and display logic for Dashboard.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -195,8 +195,8 @@
     "txt-alertThreatLevel": "Alert Threat Level",
     "txt-Top10ExternalSrcCountry": "Alert Source Country",
     "txt-Top10InternalSrcIp": "Alert Internal Source IP",
-    "txt-Top10InternalIp": "Alert Internal IP",
-    "txt-Top10InternalMaskedIp": "Alert Internal Masked IP",
+    "txt-InternalIp": "Alert Internal IP",
+    "txt-InternalMaskedIp": "Alert Internal Masked IP",
     "txt-Top10SyslogConfigSource": "Syslog Config Source",
     "txt-dnsQuery": "DNS Query",
     "txt-disk-usage": "Disk Usage",
