--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -195,8 +195,8 @@
     "txt-alertThreatLevel": "告警威脅等級統計",
     "txt-Top10ExternalSrcCountry": "外部國家告警統計",
     "txt-Top10InternalSrcIp": "內部主機告警統計",
-    "txt-Top10InternalIp": "內部主機告警統計",
-    "txt-Top10InternalMaskedIp": "內部網段告警統計",
+    "txt-InternalIp": "內部主機告警統計",
+    "txt-InternalMaskedIp": "內部網段告警統計",
     "txt-Top10SyslogConfigSource": "系統日誌類型統計",
     "txt-dnsQuery": "DNS Query",
     "txt-disk-usage": "系統可用空間狀態",
