Update loading logic for the Dashboard and Edge Threat page. Add IDS-NETPROBE on Edge.

--- a/locales/en/errors.json
+++ b/locales/en/errors.json
@@ -51,6 +51,7 @@
   "-1004": "password must contain at least one lower-case alphabet/upper-case alphabet/digital/special character and have length more than 12.",
   "-1005": "Password is expired",
   "-1006": "Login fails exceed 5 times",
+  "-1007": "Account service fails",
   "-5001": "Port number is duplicated",
   "-5002": "IP is duplicated",
   "-5003": "Match pattern format error",
