Implement and complete the lazy loading for HMD dialog box.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -382,9 +382,10 @@
     "txt-backToList": "$t(txt-back) to $t(txt-listText)",
     "txt-backToMap": "$t(txt-back) to $t(txt-map)",
     "txt-lastUpdate": "Last Update",
+    "txt-latestCreateTime": "Latest Create Time",
+    "txt-latestResponseTime": "Latest Response Time",
     "txt-createTime": "Create Time",
     "txt-responseTime": "Response Time",
-    "txt-checkTime": "Check Time",
     "txt-suspiciousFileCount": "Suspicious File Count",
     "txt-suspiciousFileName": "Suspicious Filename",
     "txt-suspiciousFilePath": "Suspicious File Path",
