--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -382,9 +382,10 @@
     "txt-backToList": "$t(txt-back)$t(txt-listText)",
     "txt-backToMap": "$t(txt-back)$t(txt-map)",
     "txt-lastUpdate": "最近更新時間",
-    "txt-createTime": "最近觸發時間",
-    "txt-responseTime": "最近回應時間",
-    "txt-checkTime": "檢測時間",
+    "txt-latestCreateTime": "最新觸發時間",
+    "txt-latestResponseTime": "最新回應時間",
+    "txt-createTime": "檢測時間",
+    "txt-responseTime": "回應時間",
     "txt-suspiciousFileCount": "可疑檔案數",
     "txt-suspiciousFileName": "可疑檔案名稱",
     "txt-suspiciousFilePath": "可疑檔案路徑",
