Add pattern tips for Config Syslog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -16,6 +16,7 @@
   "txt-view": "View",
   "txt-close": "Close",
   "txt-show": "Show",
+  "txt-tips": "Tips",
   "txt-account": "Account",
   "txt-accounts": "Accounts",
   "txt-accountPassword": "Account/Password",
