--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -16,6 +16,7 @@
   "txt-view": "瀏覽",
   "txt-close": "關閉",
   "txt-show": "顯示",
+  "txt-tips": "提示",
   "txt-account": "帳號",
   "txt-accounts": "帳號",
   "txt-accountPassword": "帳號/密碼",
