--- a/locales/en/lms.json
+++ b/locales/en/lms.json
@@ -37,5 +37,7 @@
 	"l-license-expiry": "License Expiry Date",
 	"l-license-key": "License Key",
 	"l-activate": "Activate",
-	"l-activate-success": "Activate Success"
+	"l-activate-success": "Activate Success",
+
+	"key-acivated": "License is acivated already"
 }
