Add IVAR table in Dashboard. Add IVAR photo and video url in Alert dialog.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -201,6 +201,8 @@
     "txt-Top10InternalSrcIp": "Alert Internal Source IP",
     "txt-InternalIp": "Alert Internal IP",
     "txt-InternalMaskedIp": "Alert Internal Masked IP",
+    "txt-frmotp": "MOTP Unregnized Face",
+    "txt-intrusion": "IVAR Unregnized Face",
     "txt-Top10SyslogConfigSource": "Syslog Config Source",
     "txt-dnsQuery": "DNS Query",
     "txt-disk-usage": "Disk Usage",
@@ -220,6 +222,7 @@
   },
 
   "alert": {
+    "txt-openVideo": "Open Video",
     "txt-alertList": "Alert List",
     "txt-alertInfo": "Alert Info",
     "txt-alertTime": "Alert Time",
