--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -324,7 +324,8 @@
     "Info": "Info",
     "Collector": "Collector",
     "Trigger": "Trigger",
-    "Suggest": "Suggest"
+    "Suggest": "Suggest",
+    "Source": "Source"
   },
   "logsFields": {
     "_tableMenu_": "",
