Complete Threats subnet table chart and updates for dashboard styles.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -251,7 +251,11 @@
     "txt-floorInfo": "Floor",
     "txt-safetyScan": "Safety Scan",
     "txt-alertThreatLevel": "Threats Level",
-    "txt-alertThreatCount": "Threats Count"
+    "txt-alertThreatCount": "Threats Count",
+    "txt-alertThreatSubnet": "Threats in subnet",
+    "txt-alertThreatPrivate": "Threats in private IP",
+    "txt-alertThreatCountry": "Threats in global country",
+    "txt-alertThreatPublic": "Threats in public IP"
   },
 
   "events": {
