Make the Dashboard Maps tree as as sorted data. Update view/edit logic for Config Edge. Other QA fixes.

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -600,13 +600,21 @@
     "value": "數值",
     "conditions": "條件",
     "query": "標示",
+    "filter": "格式設定",
+    "relationship": "關聯設定",
+    "dataSampleInput": "串流資料",
+    "matchPattern": "Pattern設定",
+    "dataProperty": "資料解譯結果",
+    "srcNode": "來源節點",
+    "dstNode": "目的節點",
     "txt-getLatest": "取得最新串流資料",
     "txt-customFieldName": "自訂欄位名稱",
     "txt-addSyslog": "新增系統日誌",
+    "txt-editSyslog": "編輯系統日誌",
     "txt-deleteSyslog": "刪除系統日誌",
     "txt-eventDist": "日誌串流事件趨勢圖",
     "txt-viewEvents": "檢視日誌串流事件",
-    "txt-overallDist": "Overall Distribution",
+    "txt-overallDist": "日誌串流事件趨勢圖",
     "txt-editHosts": "編輯主機",
     "txt-timelineUnavailable": "Timeline資料不存在"
   }
