--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -600,9 +600,17 @@
     "value": "Value",
     "conditions": "Conditions",
     "query": "Query",
+    "filter": "Filter",
+    "relationship": "Relationship",
+    "dataSampleInput": "Data Sample Input",
+    "matchPattern": "Match Pattern",
+    "dataProperty": "Data Property",
+    "srcNode": "Source Node",
+    "dstNode": "Destination Node",
     "txt-getLatest": "Get Latest Input Text",
     "txt-customFieldName": "Custom Field Name",
     "txt-addSyslog": "Add Syslog",
+    "txt-editSyslog": "Edit Syslog",
     "txt-deleteSyslogdeleteSyslog": "Delete Syslog",
     "txt-eventDist": " Event Distribution",
     "txt-viewEvents": "View Events",
