--- a/locales/en/lms.json
+++ b/locales/en/lms.json
@@ -36,8 +36,11 @@
 	"l-license-already": "Licensed",
 	"l-license-expiry": "License Expiry Date",
 	"l-license-key": "License Key",
+	"l-new-license-key": "New License Key",
+	"l-license-renew-key": "Renew License Key",
 	"l-activate": "Activate",
 	"l-activate-success": "Activate Success",
 
-	"key-acivated": "License is acivated already"
+	"key-acivated": "License is acivated already",
+	"key-empty": "License key cannot be empty"
 }
