--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -55,6 +55,9 @@
   "-5001": "Port number不得重複",
   "-5002": "IP不得重複",
   "-5003": "Match Pattern格式錯誤",
+  "-5004": "IP不得空白",
+  "-5005": "IP格式錯誤",
+  "-5006": "新增IP失敗",
 
   "txt-param-null": "參數為空",
   "txt-account-fail" : "無法由AD獲取帳號資訊"
