--- a/locales/zh/accounts.json
+++ b/locales/zh/accounts.json
@@ -55,9 +55,12 @@
     "title": "$t(l-title)",
     "phone": "$t(l-phone)"
   },
+  "setNewPwd": "設定密碼",
   "change-expired-pwd":"請更改你的密碼，因密碼已過期",
   "oldPwd":"舊密碼",
   "newPwd":"新密碼",
   "rewritePwd":"再次輸入新密碼",
+  "pwd": "密碼",
+  "reenterPwd": "再次輸入密碼",
   "pwd-inconsistent":"兩次輸入的內容不相同"
 }
