Add HMD info table in Dashboard.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -216,7 +216,10 @@
     "txt-srcCountry": "Source Country",
     "txt-srcCity": "Source City",
     "txt-private": "Private",
-    "txt-public": "Public"
+    "txt-public": "Public",
+    "txt-hmd": "HMD",
+    "txt-max": "Max",
+    "txt-hosts": "Hosts"
   },
 
   "alert": {
