--- a/locales/en/lms.json
+++ b/locales/en/lms.json
@@ -34,7 +34,7 @@
 	"l-license-status": "License Status",
 	"l-license-none": "No License",
 	"l-license-already": "Licensed",
-	"l-license-expiry": "License Expiry Date",
+	"l-license-expiry": "License Expiration Date",
 	"l-license-key": "License Key",
 	"l-new-license-key": "New License Key",
 	"l-license-renew-key": "Renew License Key",
