--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -408,6 +408,7 @@
     "txt-total": "Total upload count",
     "txt-success": "Total success count",
     "txt-fail": "Total fail count",
+    "txt-syncYaraFail": "Sync YARA rule fail",
     "txt-irMsg": "IR data has been uploaded to",
     "txt-itemSelection": "Select IR Set",
     "txt-duplicatedIP": "IP already exists, please enter another IP",
