Add SCP logo image and update login background. Update externalSrcCountry API name. Add MAC format validation.

--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -61,7 +61,9 @@
     "lbl-password": "Please Enter Password",
     "txt-username":"Please enter your username",
     "txt-password":"Please enter your password",
-    "txt-account": "Account"
+    "txt-account": "Account",
+    "txt-userAccount": "Username",
+    "txt-userPassword": "Password"
   },
 
   "toggle-theme": "Toggle Theme",
