--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -388,6 +388,7 @@
     "txt-batchUpload": "Batch Upload",
     "txt-batchUploadIp": "Batch Upload IP",
     "txt-uploadFailedIP": "IP address is incorrect, please try upload again.",
+    "txt-uploadFailedMAC": "MAC format is incorrect, please try upload again.",
     "txt-uploadFailed": "The following IP contains error, please try again.",
     "txt-autoSettings": "Auto Settings",
     "txt-withHeader": "With Header",
